<resources>
    <string name="default_web_client_id">998051041083-so852o94tsl2pnlmd61o4a43kvc2dh59.apps.googleusercontent.com</string>
    <string name="app_name">Track Expense</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_notifications">icon_notifications</string>
    <string name="account_balance">Account Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings</string>
    <string name="icon_income">icon_income</string>
    <string name="icon_expense">icon_expense</string>
    <string name="icon_savings">icon_savings</string>
    <string name="icon_quota">icon_quota</string>
    <string name="floating_button_quick_add_transaction">floating_button_quick_add_transaction</string>
    <string name="icon_back_button">icon_back_button</string>
    <string name="icon_menu_button">icon_menu_button</string>
    <string name="expenses">Expenses</string>
    <string name="add_income">Add\nIncome</string>
    <string name="add_expense">Add\nExpense</string>
    <string name="icon_add_income">icon_add_income</string>
    <string name="icon_add_expense">icon_add_expense</string>
    <string name="previous">Previous</string>
    <string name="next_page">Next Page</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="loan">Loan</string>
    <string name="progress">Progress</string>
    <string name="transactions">Transactions</string>
    <string name="icon_play">icon_play</string>
    <string name="icon_pause">icon_pause</string>
    <string name="icon_transaction1">icon_transaction1</string>
    <string name="icon_transaction2">icon_transaction2</string>
    <string name="icon_transaction3">icon_transaction3</string>
    <string name="choose_type_of_transaction">Choose Type of Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="amount_received">Amount Received</string>
    <string name="from">From</string>
    <string name="the_date_and_time_will_be_recorded_automatically">The Date and Time will be recorded automatically.</string>
    <string name="quick_save">Quick Save</string>
    <string name="to">To</string>
    <string name="icon_transaction4">icon_transaction4</string>
    <string name="for_reason">For :</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="special_transaction">Special Transaction :</string>
    <string name="distinct">Distinct : </string>
    <string name="save">Save</string>
    <string name="icon_transaction">icon_transaction</string>
    <string name="amount_spent_sent">Amount Spent/Sent</string>
    <string name="mode">Mode :</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_ahead">Continue</string>
    <string name="or_symbol">-or-</string>
    <string name="warning">warning</string>
    <string name="logout">Logout</string>
</resources>