<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_quick_add_income"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:clipChildren="false"
    android:paddingVertical="6dp">

    <TextView
        android:id="@+id/text_view_quick_add_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/income"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_quick_add_income"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_quick_add_income_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_amount_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_quick_add_income">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_amount_received"
            android:layout_width="220dp"
            android:layout_height="48sp"
            android:hint="@string/amount_received"
            android:inputType="number"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/input_layout_amount_received"
        app:layout_constraintTop_toBottomOf="@id/input_layout_amount_received">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_from"
            android:layout_width="175dp"
            android:layout_height="48sp"
            android:hint="@string/from"
            android:inputType="textPersonName"
            android:padding="0dp"
            tools:text="Hardik" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/for_reason"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_from"
        app:layout_constraintStart_toEndOf="@id/input_layout_from"
        app:layout_constraintTop_toTopOf="@id/input_layout_from" />

    <Spinner
        android:id="@+id/spinner_income_for"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_from"
        app:layout_constraintStart_toEndOf="@id/text_view_for"
        app:layout_constraintTop_toTopOf="@id/input_layout_from" />

    <TextView
        android:id="@+id/text_view_date_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/the_date_and_time_will_be_recorded_automatically"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_from" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_quick_add_income"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/quick_save"
        android:textColor="#1B5E20"
        app:backgroundTint="#A5D6A7"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_date_note" />

</androidx.constraintlayout.widget.ConstraintLayout>