<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="36dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_sign_up_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_sign_up_email_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:textSize="14dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="14dp"
            tools:text="Hello" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up_continue"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:backgroundTint="#C8E6C9"
        android:paddingHorizontal="36dp"
        android:text="@string/continue_ahead"
        android:textColor="#1B5E20"
        android:textSize="14dp"
        app:cornerRadius="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/or_symbol"
        android:textColor="#BABABA"
        android:textSize="14dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up_google"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00000000"
        android:text="Sign Up with Google"
        android:textColor="#1B5E20"
        android:textSize="14dp"
        app:cornerRadius="12dp" />

</LinearLayout>