<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_quick_add_buttons"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/bottom_sheet_background"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingVertical="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="4dp"
        android:text="@string/transaction_type"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_quick_add_income"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#C8E6C9"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp"
                app:rippleColor="#80FFFFFF"
                app:strokeColor="#C8E6C9">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/icon_income"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_down_left" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/income"
                android:textColor="#1B5E20"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_quick_add_expense"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#FFCDD2"
                app:cardCornerRadius="18dp"
                app:cardElevation="2dp"
                app:rippleColor="#80FFFFFF"
                app:strokeColor="#FFCDD2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/icon_income"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/arrow_up_right" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:text="@string/expense"
                android:textColor="#B71C1C"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>